Modularização e comentários no pacote repository